--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
+            "razorpay": "^2.9.6",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
@@ -45,7 +46,6 @@
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
-            "supabase": "^2.40.7",
             "tailwind-merge": "*",
             "vaul": "^1.1.2"
       },
@@ -54,6 +54,7 @@
             "@types/react": "^19.1.13",
             "@types/react-dom": "^19.1.9",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "supabase": "^2.40.7",
             "vite": "^6.3.6"
       },
       "scripts": {
